--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1{
   font-family:'OCR A Std', monospace;
 }
 #first{
-  background-color:#5F9EA0
+  background:#5F9EA0
   margin-left: 25%;
   width:50%;
   border:5px solid white;
